hpo/force-app/main/default/objects/Benefit_Setting__mdt/Benefit_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Permits admin user to create/update logic related to issuing benefits per donor per dollar amount</description>
    <label>Benefit Setting</label>
    <pluralLabel>Benefit Settings</pluralLabel>
</CustomObject>