hpo/force-app/main/default/objects/Benefit_Setting__mdt/fields/DollarValue__c.field-meta.xml
<CustomField>
    <fullName>DollarValue__c</fullName>
    <description>Amount each benefit of this type is worth in dollars</description>
    <label>Dollar Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>