hpo/force-app/main/default/objects/Benefit_Setting__mdt/fields/DonationAmount__c.field-meta.xml
<CustomField>
    <fullName>DonationAmount__c</fullName>
    <description>Threshold amount donated that will trigger this benefit</description>
    <label>Donation Amount</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>