hpo/force-app/main/default/objects/Benefit_Setting__mdt/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of benefits to issue</description>
    <label>Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>